Fix thinking animation in dark mode

--- a/appsmith/mascot/styles.css
+++ b/appsmith/mascot/styles.css
@@ -386,6 +386,7 @@ body.dark nav .buttons-container {
 .dark.thinking .eyes {
     background-image: url("images/dark/eyes/concentrate.svg");
 }
+.dark.thinking .hair-dynamic,
 .thinking .hair-dynamic {
     background-image: none;
 }
